tests/dataset/tpc-ds/compiler/cpp/q44.error
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:65:12: error: ‘ss’ was not declared in this scope
   65 |   decltype(ss) ss;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:65:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:68:40: error: ‘struct GroupedBase’ has no member named ‘ss_item_sk’
   68 |   decltype(std::declval<GroupedBase>().ss_item_sk) key;
      |                                        ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:68:40: error: ‘struct GroupedBase’ has no member named ‘ss_item_sk’
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:84:12: error: ‘best_name’ was not declared in this scope
   84 |   decltype(best_name) best_performing;
      |            ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:84:12: error: ‘best_name’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:85:12: error: ‘worst_name’ was not declared in this scope
   85 |   decltype(worst_name) worst_performing;
      |            ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:85:12: error: ‘worst_name’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:174:43: error: cannot convert ‘StoreSale’ to ‘int’ in initialization
  174 |           __g.items.push_back(GroupedBase{ss});
      |                                           ^~
      |                                           |
      |                                           StoreSale
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:181:67: error: cannot convert ‘StoreSale’ to ‘int’ in initialization
  181 |             __struct4{__key, std::vector<GroupedBase>{GroupedBase{ss}}});
      |                                                                   ^~
      |                                                                   |
      |                                                                   StoreSale
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:181:70: error: no matching function for call to ‘std::vector<GroupedBase>::vector(<brace-enclosed initializer list>)’
  181 |             __struct4{__key, std::vector<GroupedBase>{GroupedBase{ss}}});
      |                                                                      ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:8:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = GroupedBase; _Alloc = std::allocator<GroupedBase>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = GroupedBase; _Alloc = std::allocator<GroupedBase>; allocator_type = std::allocator<GroupedBase>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = GroupedBase; _Alloc = std::allocator<GroupedBase>; std::__type_identity_t<_Alloc> = std::allocator<GroupedBase>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = GroupedBase; _Alloc = std::allocator<GroupedBase>; allocator_type = std::allocator<GroupedBase>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = GroupedBase; _Alloc = std::allocator<GroupedBase>; allocator_type = std::allocator<GroupedBase>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = GroupedBase; _Alloc = std::allocator<GroupedBase>; std::__type_identity_t<_Alloc> = std::allocator<GroupedBase>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = GroupedBase; _Alloc = std::allocator<GroupedBase>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = GroupedBase; _Alloc = std::allocator<GroupedBase>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = GroupedBase; _Alloc = std::allocator<GroupedBase>; size_type = long unsigned int; value_type = GroupedBase; allocator_type = std::allocator<GroupedBase>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = GroupedBase; _Alloc = std::allocator<GroupedBase>; size_type = long unsigned int; allocator_type = std::allocator<GroupedBase>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = GroupedBase; _Alloc = std::allocator<GroupedBase>; allocator_type = std::allocator<GroupedBase>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = GroupedBase; _Alloc = std::allocator<GroupedBase>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:188:62: error: ‘struct GroupedBase’ has no member named ‘ss_net_profit’
  188 |             std::vector<decltype(std::declval<GroupedBase>().ss_net_profit)>
      |                                                              ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:188:62: error: ‘struct GroupedBase’ has no member named ‘ss_net_profit’
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:188:76: error: template argument 1 is invalid
  188 |             std::vector<decltype(std::declval<GroupedBase>().ss_net_profit)>
      |                                                                            ^
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:188:76: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:191:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  191 |               __items.push_back(x.ss_net_profit);
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:191:35: error: ‘struct GroupedBase’ has no member named ‘ss_net_profit’
  191 |               __items.push_back(x.ss_net_profit);
      |                                   ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:187:23: error: no matching function for call to ‘__avg(int)’
  187 |           g.key, __avg(([&]() {
      |                  ~~~~~^~~~~~~~~
  188 |             std::vector<decltype(std::declval<GroupedBase>().ss_net_profit)>
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  189 |                 __items;
      |                 ~~~~~~~~
  190 |             for (auto x : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  191 |               __items.push_back(x.ss_net_profit);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  192 |             }
      |             ~          
  193 |             return __items;
      |             ~~~~~~~~~~~~~~~
  194 |           })())});
      |           ~~~~~        
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:71:30: note: candidate: ‘template<class T> double __avg(const std::vector<T>&)’
   71 | template <typename T> double __avg(const std::vector<T> &v) {
      |                              ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:71:30: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:187:23: note:   mismatched types ‘const std::vector<T>’ and ‘int’
  187 |           g.key, __avg(([&]() {
      |                  ~~~~~^~~~~~~~~
  188 |             std::vector<decltype(std::declval<GroupedBase>().ss_net_profit)>
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  189 |                 __items;
      |                 ~~~~~~~~
  190 |             for (auto x : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  191 |               __items.push_back(x.ss_net_profit);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  192 |             }
      |             ~          
  193 |             return __items;
      |             ~~~~~~~~~~~~~~~
  194 |           })())});
      |           ~~~~~        
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:197:5: error: conversion from ‘vector<__struct5>’ to non-scalar type ‘vector<GroupedBase>’ requested
  167 |   std::vector<GroupedBase> grouped_base = (([&]() {
      |                                           ~~~~~~~~~
  168 |     std::vector<__struct4> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  169 |     for (auto ss : store_sales) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  170 |       auto __key = ss.ss_item_sk;
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  171 |       bool __found = false;
      |       ~~~~~~~~~~~~~~~~~~~~~
  172 |       for (auto &__g : __groups) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  173 |         if (__g.key == __key) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
  174 |           __g.items.push_back(GroupedBase{ss});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  175 |           __found = true;
      |           ~~~~~~~~~~~~~~~
  176 |           break;
      |           ~~~~~~
  177 |         }
      |         ~
  178 |       }
      |       ~
  179 |       if (!__found) {
      |       ~~~~~~~~~~~~~~~
  180 |         __groups.push_back(
      |         ~~~~~~~~~~~~~~~~~~~
  181 |             __struct4{__key, std::vector<GroupedBase>{GroupedBase{ss}}});
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  182 |       }
      |       ~
  183 |     }
      |     ~
  184 |     std::vector<__struct5> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  185 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  186 |       __items.push_back(__struct5{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  187 |           g.key, __avg(([&]() {
      |           ~~~~~~~~~~~~~~~~~~~~~
  188 |             std::vector<decltype(std::declval<GroupedBase>().ss_net_profit)>
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  189 |                 __items;
      |                 ~~~~~~~~
  190 |             for (auto x : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  191 |               __items.push_back(x.ss_net_profit);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  192 |             }
      |             ~
  193 |             return __items;
      |             ~~~~~~~~~~~~~~~
  194 |           })())});
      |           ~~~~~~~~
  195 |     }
      |     ~
  196 |     return __items;
      |     ~~~~~~~~~~~~~~~
  197 |   })());
      |   ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:200:64: error: ‘struct GroupedBase’ has no member named ‘avg_profit’
  200 |     std::vector<std::pair<decltype(std::declval<GroupedBase>().avg_profit),
      |                                                                ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:200:64: error: ‘struct GroupedBase’ has no member named ‘avg_profit’
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:201:27: error: template argument 1 is invalid
  201 |                           GroupedBase>>
      |                           ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:201:38: error: template argument 1 is invalid
  201 |                           GroupedBase>>
      |                                      ^~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:201:38: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:204:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  204 |       __items.push_back({(-x.avg_profit), x});
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:204:30: error: ‘struct GroupedBase’ has no member named ‘avg_profit’
  204 |       __items.push_back({(-x.avg_profit), x});
      |                              ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:206:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
  206 |     std::sort(__items.begin(), __items.end(),
      |                       ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:206:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
  206 |     std::sort(__items.begin(), __items.end(),
      |                                        ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:209:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  209 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:3:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:209:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  209 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:199:15: error: ‘first’ was not declared in this scope
  199 |   auto best = first(([&]() {
      |               ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:214:64: error: ‘struct GroupedBase’ has no member named ‘avg_profit’
  214 |     std::vector<std::pair<decltype(std::declval<GroupedBase>().avg_profit),
      |                                                                ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:214:64: error: ‘struct GroupedBase’ has no member named ‘avg_profit’
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:215:27: error: template argument 1 is invalid
  215 |                           GroupedBase>>
      |                           ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:215:38: error: template argument 1 is invalid
  215 |                           GroupedBase>>
      |                                      ^~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:215:38: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:218:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  218 |       __items.push_back({x.avg_profit, x});
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:218:28: error: ‘struct GroupedBase’ has no member named ‘avg_profit’
  218 |       __items.push_back({x.avg_profit, x});
      |                            ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:220:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
  220 |     std::sort(__items.begin(), __items.end(),
      |                       ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:220:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
  220 |     std::sort(__items.begin(), __items.end(),
      |                                        ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:223:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  223 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:223:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  223 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:228:26: error: ‘i’ was not declared in this scope
  228 |     std::vector<decltype(i.i_product_name)> __items;
      |                          ^
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:228:43: error: template argument 1 is invalid
  228 |     std::vector<decltype(i.i_product_name)> __items;
      |                                           ^
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:228:43: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:232:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  232 |       __items.push_back(i.i_product_name);
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:237:26: error: ‘i’ was not declared in this scope
  237 |     std::vector<decltype(i.i_product_name)> __items;
      |                          ^
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:237:43: error: template argument 1 is invalid
  237 |     std::vector<decltype(i.i_product_name)> __items;
      |                                           ^
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:237:43: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq442139524863/001/prog.cpp:241:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  241 |       __items.push_back(i.i_product_name);
      |               ^~~~~~~~~
